--- a/copier.yml
+++ b/copier.yml
@@ -3,8 +3,19 @@
 _min_copier_version: "9.4.0"
 _subdirectory: template
 _message_after_copy: | 
-    Your package template has been copied! Remember to look for any
-    unfilled _changeme_ strings and confirm the LICENSE file!
+    Your package template has been copied!
+
+    Next steps:
+    
+    cd _changeme_
+    git init
+    # Adjust code. 
+    # Remember to look for any unfilled _changeme_ strings and confirm the LICENSE file!
+    git add .
+    git commit -m "Init commit"
+    # Create repo on GitHub.
+    git remote add origin git@github.com:_changeme_/_changeme_.git  # or https://...
+    git push -u origin main
 
 package_name:
     type: str
@@ -35,3 +46,8 @@ package_github_org:
     type: str
     help: Package GitHub org or username? (Press enter to fill in later.)
     default: _changeme_
+
+package_license:
+    type: str
+    help: License?
+    default: MIT
