--- a/copier.yml
+++ b/copier.yml
@@ -15,6 +15,7 @@ _message_after_copy: |
     git commit -m "Initial commit from simple-modern-poetry."
     # Create repo on GitHub.
     git remote add origin git@github.com:OWNER/PROJECT.git  # or https://...
+    git branch -M main
     git push -u origin main
 
 package_name:
