More help about licenses.

--- a/copier.yml
+++ b/copier.yml
@@ -5,12 +5,15 @@ _subdirectory: template
 _message_after_copy: | 
     Your package template has been copied!
 
+    Remember to look for any unfilled _changeme_ strings and confirm the license!
+    By default this template uses MIT license.
+    See `license` in pyproject.yaml and update the LICENSE file. 
+
     Next steps:
     
     cd PROJECT
     git init
-    # Adjust code. 
-    # Remember to look for any unfilled _changeme_ strings and confirm the LICENSE file!
+    # Make license or other initial adjustments if needed.
     git add .
     git commit -m "Initial commit from simple-modern-poetry."
     # Create repo on GitHub.
