--- a/copier.yml
+++ b/copier.yml
@@ -23,12 +23,12 @@ _message_after_copy: |
 
 package_name:
     type: str
-    help: What is the package name? (Title Case or lowercase name. This is the only required field.)
+    help: What is the package name? (This will be the GitHub repo and PyPI package name, so use CamelCase, dash-case, or snake_case. This is the only required field.)
     default: _changeme_
 
-package_slug:
+package_module:
     type: str
-    help: Package slug / repo name? (Use hyphen-case or snake_case. Or press enter to fill in later.)
+    help: Package module name? (This is the Python module, so use snake_case. Or press enter to fill in later.)
     default: _changeme_
 
 package_description:
