Minor fix in makefile.

--- a/template/Makefile
+++ b/template/Makefile
@@ -3,7 +3,7 @@
 
 .DEFAULT_GOAL := default
 
-.PHONY: default install lint test build clean
+.PHONY: default install lint test upgrade build clean
 
 default: install lint test
 
