--- a/copier.yml
+++ b/copier.yml
@@ -5,7 +5,7 @@ _subdirectory: template
 _message_after_copy: | 
     Your package template has been copied!
 
-    Remember to look for any unfilled _changeme_ strings and confirm the license!
+    Remember to look for any unfilled `changeme` strings and confirm the license!
     By default this template uses MIT license.
     See `license` in pyproject.yaml and update the LICENSE file. 
 
@@ -24,29 +24,29 @@ _message_after_copy: |
 package_name:
     type: str
     help: What is the package name? (This will be the GitHub repo and PyPI package name, so use CamelCase, dash-case, or snake_case. This is the only required field.)
-    default: _changeme_
+    default: changeme
 
 package_module:
     type: str
     help: Package module name? (This is the Python module, so use snake_case. Or press enter to fill in later.)
-    default: _changeme_
+    default: changeme
 
 package_description:
     type: str
     help: Package description? (Press enter to fill in later.)
-    default: _changeme_
+    default: changeme
 
 package_author_name:
     type: str
     help: Package author name? (Press enter to fill in later.)
-    default: _changeme_
+    default: changeme
 
 package_author_email:
     type: str
     help: Package author email? (Press enter to fill in later.)
-    default: _changeme_
+    default: changeme@example.com
 
 package_github_org:
     type: str
     help: Package GitHub org or username? (Press enter to fill in later.)
-    default: _changeme_
+    default: changeme
