--- a/template/Makefile
+++ b/template/Makefile
@@ -4,9 +4,9 @@
 
 .DEFAULT_GOAL := default
 
-.PHONY: default install lint test upgrade build clean
+.PHONY: default install lint test upgrade build clean agent-rules
 
-default: install lint test
+default: agent-rules install lint test 
 
 install:
 	uv sync --all-extras --dev
@@ -23,10 +23,21 @@ upgrade:
 build:
 	uv build
 
+agent-rules: CLAUDE.md AGENTS.md
+
+# Use .cursor/rules for sources of rules.
+# Create Claude and Codex rules from these.
+CLAUDE.md: .cursor/rules/general.mdc .cursor/rules/python.mdc
+	cat .cursor/rules/general.mdc .cursor/rules/python.mdc > CLAUDE.md
+
+AGENTS.md: .cursor/rules/general.mdc .cursor/rules/python.mdc
+	cat .cursor/rules/general.mdc .cursor/rules/python.mdc > AGENTS.md
+
 clean:
 	-rm -rf dist/
 	-rm -rf *.egg-info/
 	-rm -rf .pytest_cache/
 	-rm -rf .mypy_cache/
 	-rm -rf .venv/
+	-rm -rf CLAUDE.md AGENTS.md
 	-find . -type d -name "__pycache__" -exec rm -rf {} +
