--- a/template/.github/workflows/publish.yml
+++ b/template/.github/workflows/publish.yml
@@ -29,13 +29,16 @@ jobs:
         run: uv python install
 
       - name: Install all dependencies
-        run: uv sync --all-extras --dev
+        run: uv sync --all-extras
 
       - name: Run tests
         run: uv run pytest
-        
+
       - name: Build package
         run: uv build
 
-      - name: Publish to PyPI (using uv)
-        uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish to PyPI
+        run: uv publish --trusted-publishing always
+        # Although uv is newer and faster, the "official" publishing option is the one from PyPA,
+        # which uses twine. If desired, replace `uv publish` with:
+        # uses: pypa/gh-action-pypi-publish@release/v1
